--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -67,6 +67,7 @@ $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
 $info-color                 : #52adc8;
+$link-color                 : #2979AB;
 
 /* brands */
 $behance-color              : #1769FF;
@@ -92,7 +93,7 @@ $xing-color                 : #006567;
 
 
 /* links */
-$link-color                 : $info-color;
+$link-color                 : $link-color;
 $link-color-hover           : mix(#000, $link-color, 25%);
 $link-color-visited         : mix(#fff, $link-color, 25%);
 $masthead-link-color        : $primary-color;
