--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
       <li><a href="https://twitter.com/{{ site.twitter.username }}"><i class="fab fa-twitter-square" aria-hidden="true"></i> Twitter</a></li>
     {% endif %}
     {% if site.author.linkedin %}
-      <li><a href="https://www.linkedin.com/in/{{ site.author.bitbucket }}"><i class="fab fa-fw fa-linked" aria-hidden="true"></i> Bitbucket</a></li>
+      <li><a href="https://www.linkedin.com/in/{{ site.author.bitbucket }}"><i class="fab fa-linked" aria-hidden="true"></i> Linkedin</a></li>
     {% endif %}
     {% if site.facebook.username %}
       <li><a href="https://facebook.com/{{ site.facebook.username }}"><i class="fab fa-facebook-square" aria-hidden="true"></i> Facebook</a></li>
