--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,3 +19,10 @@
 <link rel="stylesheet" href="{{ base_path }}/assets/css/main.css">
 
 <meta http-equiv="cleartype" content="on">
+
+{% if page.url == "/" %}
+  <meta name="description" content="About Me">
+  <meta name="author" content="lalalalalalalal">
+{% endif %}
+
+
