--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,7 +22,27 @@
 
 {% if page.url == "/" %}
   <meta name="description" content="About Me">
-  <meta name="author" content="lalalalalalalal">
+  <meta name="author" content="Mati Ur Rehman">
+{% endif %}
+
+{% if page.url == "/publications/" %}
+  <meta name="description" content="Research publications">
+  <meta name="author" content="Mati Ur Rehman">
+{% endif %}
+
+{% if page.url == "/publication/2022-08-10-it-affordances-and-consumption-values-perspective-for-the-use-of-social-commerce" %}
+  <meta name="description" content="This paper develops a framework based on affordance theory and theory of consumption values to understand which consumption values motivate feature-enabled affordances to satisfy buyers and sellers and how that impacts the overall transactional experience on the platform.">
+  <meta name="author" content="Mati Ur Rehman">
+{% endif %}
+
+{% if page.url == "/publication/2021-it-affordances-and-social-commerce-used-product-marketplace" %}
+  <meta name="description" content="Our study aims to measure IT affordance in Facebook Marketplace and how affordance created by the interaction of users and platform features promote purchase intention and seller’s sale intention.">
+  <meta name="author" content="Mati Ur Rehman">
+{% endif %}
+
+{% if page.url == "publication/2019-healthcare-4-trends-challenges-and-benefits" %}
+  <meta name="description" content="The object of the study is to identify the challenges, trends and gaps in the existing body of research with regard to Healthcare 4.0.">
+  <meta name="author" content="Mati Ur Rehman">
 {% endif %}
 
 
