--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -425,7 +425,7 @@
   li > ul li {
     display: none;
 
-    @include breakpoint($medium) {
+    @include breakpoint($small) {
       display: block;
     }
   }
