--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -35,4 +35,7 @@
 </script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=TeX-MML-AM_CHTML' async></script>
 
+{% if page.url == "/talks/" %}
+  <meta http-equiv="refresh" content="0; URL=https://matiurrehman.com" />
+{% endif %}
 <!-- end custom head snippets -->
