--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -38,4 +38,45 @@
 {% if page.url == "/talks/" %}
   <meta http-equiv="refresh" content="0; URL=https://matiurrehman.com" />
 {% endif %}
+
+{% if page.url == "/posts/" %}
+  <meta http-equiv="refresh" content="0; URL=https://matiurrehman.com" />
+{% endif %}
+
+{% if page.url == "/teaching/" %}
+  <meta http-equiv="refresh" content="0; URL=https://matiurrehman.com" />
+{% endif %}
+
+
+{% if page.url == "/categories/" %}
+  <meta http-equiv="refresh" content="0; URL=https://matiurrehman.com" />
+{% endif %}
+
+{% if page.url == "/markdown/" %}
+  <meta http-equiv="refresh" content="0; URL=https://matiurrehman.com" />
+{% endif %}
+
+{% if page.url == "/non-menu-page/" %}
+  <meta http-equiv="refresh" content="0; URL=https://matiurrehman.com" />
+{% endif %}
+
+{% if page.url == "/page-archive/" %}
+  <meta http-equiv="refresh" content="0; URL=https://matiurrehman.com" />
+{% endif %}
+
+{% if page.url == "/tags/" %}
+  <meta http-equiv="refresh" content="0; URL=https://matiurrehman.com" />
+{% endif %}
+
+{% if page.url == "/talkmap" %}
+  <meta http-equiv="refresh" content="0; URL=https://matiurrehman.com" />
+{% endif %}
+
+{% if page.url == "/terms/" %}
+  <meta http-equiv="refresh" content="0; URL=https://matiurrehman.com" />
+{% endif %}
+
+{% if page.url == "/year-archive/" %}
+  <meta http-equiv="refresh" content="0; URL=https://matiurrehman.com" />
+{% endif %}
 <!-- end custom head snippets -->
