--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -262,6 +262,13 @@ body:hover .visually-hidden button {
   .fa-twitter-square {
     color: $twitter-color;
   }
+  
+   .fa-x-twitter,
+   .fa-x-twitter-square {
+      color: $twitter-color;
+   }
+
+   
 
   .fa-vimeo,
   .fa-vimeo-square {
