--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -44,7 +44,7 @@
         <li><a href="https://twitter.com/{{ author.twitter }}"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i> Twitter</a></li>
       {% endif %}
       {% if author.facebook %}
-        <li><a href="https://www.facebook.com/{{ author.facebook }}"><i class="fab fa-fw fa-facebook-square" aria-hidden="true"></i> Facebook</a></li>
+        <li><a href="https://www.facebook.com/{{ author.facebook }}"><i class="fa-brands fa-facebook-f" aria-hidden="true"></i> Facebook</a></li>
       {% endif %}
       {% if author.google_plus %}
         <li><a href="https://plus.google.com/+{{ author.google_plus }}"><i class="fab fa-fw fa-google-plus" aria-hidden="true"></i> Google+</a></li>
