--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
       <li><strong>{{ site.data.ui-text[site.locale].follow_label }}</strong></li>
     {% endif %}
     {% if site.twitter.username %}
-      <li><a href="https://twitter.com/{{ site.twitter.username }}"><i class="fab fa-twitter-square" aria-hidden="true"></i> Twitter</a></li>
+      <li><a href="https://x.com/{{ site.twitter.username }}"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i> X</a></li>
     {% endif %}
     {% if site.author.linkedin %}
       <li><a href="https://www.linkedin.com/in/{{ site.author.linkedin}}"><i class="fab fa-linkedin" aria-hidden="true"></i> Linkedin</a></li>
