--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -186,6 +186,11 @@ body:hover .visually-hidden button {
     color: #000;
   }
 
+   .fa-brands{
+      color: #000;
+   }
+   
+
   .fa-behance,
   .fa-behance-square {
     color: $behance-color;
