--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -268,8 +268,7 @@ body:hover .visually-hidden button {
     color: $twitter-color;
   }
   
-   .fa-x-twitter,
-   .fa-x-twitter-square {
+   .fa-x-twitter {
       color: $twitter-color;
    }
 
