--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -2,6 +2,40 @@
 
 <!-- start custom head snippets -->
 
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Mati Ur Rehman",
+  "alternateName": "Mati Ur Rehman Iowa State University",
+  "image": "https://matiurrehman.com/images/profile.png", 
+  "jobTitle": "PhD Student",
+  "worksFor": {
+    "@type": "EducationalOrganization",
+    "name": "Iowa State University"
+  },
+  "alumniOf": [
+    {
+      "@type": "EducationalOrganization",
+      "name": "Swinburne University of Technology"
+    },
+    {
+      "@type": "EducationalOrganization",
+      "name": "Lahore University of Management Sciences"
+    }
+  ],
+  "sameAs": [
+    "https://scholar.google.com/citations?user=y54rDXwAAAAJ&hl=en",
+    "https://www.linkedin.com/in/matiurrehmanpk",
+    "https://orcid.org/0000-0002-5324-9550",
+    "https://www.researchgate.net/profile/Mati-Ur-Rehman-4",
+    "https://twitter.com/@ImMatiUrRehman"
+  ],
+  "url": "https://matiurrehman.com/",
+  "description": "Mati Ur Rehman is a PhD student in Management Information Systems at Iowa State University. His research focuses on AI, and social commerce."
+}
+</script>
+
 <link rel="apple-touch-icon" sizes="57x57" href="{{ base_path }}/images/apple-touch-icon-57x57.png?v=M44lzPylqQ">
 <link rel="apple-touch-icon" sizes="60x60" href="{{ base_path }}/images/apple-touch-icon-60x60.png?v=M44lzPylqQ">
 <link rel="apple-touch-icon" sizes="72x72" href="{{ base_path }}/images/apple-touch-icon-72x72.png?v=M44lzPylqQ">
